force-app/main/default/objects/NSSales_NPO_Approval_Comments__c/NSSales_NPO_Approval_Comments__c.object-meta.xml
<CustomObject>
    <label>NPO Approval Comment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPO Approval Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>