force-app/main/default/objects/NSSales_NPO_Approval_Comments__c/fields/NSSales_Commented_By__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Commented_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commented By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPO_Approval_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>