force-app/main/default/objects/NSSales_NPO_Approval_Comments__c/fields/NSSales_Comments__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>