force-app/main/default/objects/NSSales_NPO_Approval_Comments__c/fields/NSSales_ProcessInstanceID__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ProcessInstanceID__c</fullName>
    <label>ProcessInstanceID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>