force-app/main/default/objects/NSSales_NPO_Approval_Comments__c/fields/NSSales_ProcessInstanceStepID__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ProcessInstanceStepID__c</fullName>
    <label>ProcessInstanceStepID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>