force-app/main/default/objects/NSSales_NPO_Approval_Comments__c/fields/NSSales_ProcessInstanceWorkItemId__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ProcessInstanceWorkItemId__c</fullName>
    <label>ProcessInstanceWorkItemId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>